# pylsp-llmls

./: AUTHORS.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
pylsp_llmls/: plugin.py
test/: conftest.py  test_plugin.py
