[tool.poetry]
name = "pylsp-llmls"
version = "0.1.0"
description = ""
authors = ["Madison Bentley <mbentley@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-lsp-server = "^1.12.0"
litellm = "^1.56.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
